changed mobile size and margin for top image on mobile to fix overlapping

--- a/css/index.css
+++ b/css/index.css
@@ -401,6 +401,10 @@ html {
   .container .top-section {
     padding: 0.3rem;
   }
+  .container .top-section .top-img-container {
+    height: 200px;
+    margin-bottom: 6rem;
+  }
 }
 .container .top-section .name-section {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
