--- a/less/includes/top-section.less
+++ b/less/includes/top-section.less
@@ -13,6 +13,10 @@
   }
   @media (max-width: 500px) {
     padding: 0.3rem;
+    .top-img-container {
+      height: 200px;
+      margin-bottom: 6rem;
+    }
   }
 
   .name-section {
